[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tubecensus"
version = "0.0.0"
description = "Sample YouTube channels and retrieve their historical Wayback Machine metadata"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Chloe Eggleston", email = "chloe.eggleston@colorado.edu" },
]
keywords = ["youtube", "wayback", "internet archive", "social media", "sampling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5",
    "rocksdict>=0.3.29",
    "huggingface_hub>=1.12.1",
    "beautifulsoup4>=4.14.3",
    "cdx-toolkit>=0.9.38",
    "jsonpath-ng>=1.8.0",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/blast-cu/tubecensus"
Repository = "https://github.com/blast-cu/tubecensus"
Issues = "https://github.com/blast-cu/tubecensus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tubecensus"]
